[DS-707] Try to used cached instances of boxed primitive values.
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5472 9c30dcfa-912a-0410-8fc2-9e0234be79fd